k8s/Jira-Deployment-Services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jira
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jira
  template:
    metadata:
      labels:
        app: jira
    spec:
      containers:
      - name: jira
        image: atlassian/jira-software:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: jira-storage
          mountPath: /var/atlassian/jira
  volumes:
  - name: jira-storage
    persistentVolumeClaim:
      claimName: jira-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: jira
spec:
  type: NodePort
  selector:
    app: jira
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30002
