k8s/MediaWiki-Deployment-Services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediawiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mediawiki
  template:
    metadata:
      labels:
        app: mediawiki
    spec:
      containers:
      - name: mediawiki
        image: mediawiki:latest
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: mediawiki
spec:
  type: NodePort
  selector:
    app: mediawiki
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30003
