k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - host:
        # Fügen Sie hier Ihre Host-Konfiguration hinzu, falls erforderlich
      http:
        paths:
          - pathType: Prefix
            path: "/jira"
            backend:
              service:
                name: jira
                port:
                  number: 8080
          - pathType: Prefix
            path: "/mediawiki(/|$)(.*)"
            backend:
              service:
                name: mediawiki
                port:
                  number: 80
          - pathType: Prefix
            path: "/mw-config/index.php/"
            backend:
              service:
                name: mediawiki
                port:
                  number: 80
          - pathType: Prefix
            path: "/*"
            backend:
              service:
                name: mediawiki
                port:
                  number: 80
          - pathType: Prefix
            path: "/wordpress/(.*)"
            backend:
              service:
                name: wordpress
                port:
                  number: 80
          - pathType: Prefix
            path: "/wp-admin/install.php"
            backend:
              service:
                name: wordpress
                port:
                  number: 80
          - pathType: Prefix
            path: "/prometheus"
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
          - pathType: Prefix
            path: "/grafana"
            backend:
              service:
                name: grafana
                port:
                  number: 3000
          - pathType: Prefix
            path: "/grafana/login"
            backend:
              service:
                name: grafana
                port:
                  number: 3000
